Second week results:
 - spring security authentication + config
 - mybatis base implementation
 - webpage + controller modifications
 - base(alpha) version

--- a/ilona/src/main/webapp/css/trackingDesign.css
+++ b/ilona/src/main/webapp/css/trackingDesign.css
@@ -8,6 +8,30 @@ h2 {
 	text-align: center;
 }
 
+ul.trackingTopMenuUL {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+li.trackingTopMenuLI {
+    float: left;
+}
+
+li.trackingTopMenuLI a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+li.trackingTopMenuLI a:hover {
+    background-color: #111111;
+}
+
 input[type=text] {
 	width: 50%;
     padding: 12px 20px;
